@@ -12,9 +12,9 @@ import io.xpipe.app.fxcomps.util.PlatformThread;
 import io.xpipe.app.util.BooleanScope;
 import io.xpipe.app.util.HumanReadableFormat;
 import io.xpipe.app.util.ThreadHelper;
-import io.xpipe.core.store.FileNames;
 import io.xpipe.core.process.OsType;
 import io.xpipe.core.store.FileKind;
+import io.xpipe.core.store.FileNames;
 import io.xpipe.core.store.FileSystem;
 import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
@@ -81,18 +81,18 @@ final class BrowserFileListComp extends SimpleComp {
         filenameCol.setCellFactory(col -> new FilenameCell(fileList.getEditing()));
 
         var sizeCol = new TableColumn<BrowserEntry, Number>("Size");
-        sizeCol.setCellValueFactory(param ->
-                new SimpleLongProperty(param.getValue().getRawFileEntry().resolved().getSize()));
+        sizeCol.setCellValueFactory(param -> new SimpleLongProperty(
+                param.getValue().getRawFileEntry().resolved().getSize()));
         sizeCol.setCellFactory(col -> new FileSizeCell());
 
         var mtimeCol = new TableColumn<BrowserEntry, Instant>("Modified");
-        mtimeCol.setCellValueFactory(param ->
-                new SimpleObjectProperty<>(param.getValue().getRawFileEntry().resolved().getDate()));
+        mtimeCol.setCellValueFactory(param -> new SimpleObjectProperty<>(
+                param.getValue().getRawFileEntry().resolved().getDate()));
         mtimeCol.setCellFactory(col -> new FileTimeCell());
 
         var modeCol = new TableColumn<BrowserEntry, String>("Attributes");
-        modeCol.setCellValueFactory(param ->
-                new SimpleObjectProperty<>(param.getValue().getRawFileEntry().resolved().getMode()));
+        modeCol.setCellValueFactory(param -> new SimpleObjectProperty<>(
+                param.getValue().getRawFileEntry().resolved().getMode()));
         modeCol.setCellFactory(col -> new FileModeCell());
         modeCol.setSortable(false);
 
@@ -171,7 +171,7 @@ final class BrowserFileListComp extends SimpleComp {
                         .mapToInt(entry -> table.getItems().indexOf(entry))
                         .toArray();
                 table.getSelectionModel()
-                        .selectIndices(table.getItems().indexOf(c.getList().get(0)), indices);
+                        .selectIndices(table.getItems().indexOf(c.getList().getFirst()), indices);
             });
         });
     }
@@ -247,12 +247,20 @@ final class BrowserFileListComp extends SimpleComp {
                                 }
 
                                 if (row.getItem() != null
-                                        && row.getItem().getRawFileEntry().resolved().getKind() == FileKind.DIRECTORY) {
+                                        && row.getItem()
+                                                        .getRawFileEntry()
+                                                        .resolved()
+                                                        .getKind()
+                                                == FileKind.DIRECTORY) {
                                     return event.getButton() == MouseButton.SECONDARY;
                                 }
 
                                 if (row.getItem() != null
-                                        && row.getItem().getRawFileEntry().resolved().getKind() != FileKind.DIRECTORY) {
+                                        && row.getItem()
+                                                        .getRawFileEntry()
+                                                        .resolved()
+                                                        .getKind()
+                                                != FileKind.DIRECTORY) {
                                     return event.getButton() == MouseButton.SECONDARY
                                             || event.getButton() == MouseButton.PRIMARY && event.getClickCount() == 2;
                                 }
@@ -409,9 +417,10 @@ final class BrowserFileListComp extends SimpleComp {
         }
 
         double proximity = 100;
-        Bounds tableBounds = tableView.localToScene(tableView.getBoundsInParent());
+        Bounds tableBounds = tableView.localToScene(tableView.getBoundsInLocal());
         double dragY = event.getSceneY();
-        double topYProximity = tableBounds.getMinY() + proximity;
+        // Include table header as well in calculations
+        double topYProximity = tableBounds.getMinY() + proximity + 20;
         double bottomYProximity = tableBounds.getMaxY() - proximity;
 
         // clamp new values between 0 and 1 to prevent scrollbar flicking around at the edges
@@ -424,15 +433,60 @@ final class BrowserFileListComp extends SimpleComp {
         }
     }
 
+    private static class FileSizeCell extends TableCell<BrowserEntry, Number> {
+
+        @Override
+        protected void updateItem(Number fileSize, boolean empty) {
+            super.updateItem(fileSize, empty);
+            if (empty || getTableRow() == null || getTableRow().getItem() == null) {
+                setText(null);
+            } else {
+                var path = getTableRow().getItem();
+                if (path.getRawFileEntry().resolved().getKind() == FileKind.DIRECTORY) {
+                    setText("");
+                } else {
+                    setText(byteCount(fileSize.longValue()));
+                }
+            }
+        }
+    }
+
+    private static class FileModeCell extends TableCell<BrowserEntry, String> {
+
+        @Override
+        protected void updateItem(String mode, boolean empty) {
+            super.updateItem(mode, empty);
+            if (empty || getTableRow() == null || getTableRow().getItem() == null) {
+                setText(null);
+            } else {
+                setText(mode);
+            }
+        }
+    }
+
+    private static class FileTimeCell extends TableCell<BrowserEntry, Instant> {
+
+        @Override
+        protected void updateItem(Instant fileTime, boolean empty) {
+            super.updateItem(fileTime, empty);
+            if (empty) {
+                setText(null);
+            } else {
+                setText(
+                        fileTime != null
+                                ? HumanReadableFormat.date(
+                                        fileTime.atZone(ZoneId.systemDefault()).toLocalDateTime())
+                                : "");
+            }
+        }
+    }
+
     private class FilenameCell extends TableCell<BrowserEntry, String> {
 
         private final StringProperty img = new SimpleStringProperty();
         private final StringProperty text = new SimpleStringProperty();
-        private final Node imageView = new PrettySvgComp(img, 24, 24)
-                .createRegion();
         private final StackPane textField =
                 new LazyTextFieldComp(text).createStructure().get();
-        private final HBox graphic;
 
         private final BooleanProperty updating = new SimpleBooleanProperty();
 
@@ -463,7 +517,8 @@ final class BrowserFileListComp extends SimpleComp {
             };
             text.addListener(listener);
 
-            graphic = new HBox(imageView, textField);
+            Node imageView = new PrettySvgComp(img, 24, 24).createRegion();
+            HBox graphic = new HBox(imageView, textField);
             graphic.setSpacing(10);
             graphic.setAlignment(Pos.CENTER_LEFT);
             HBox.setHgrow(textField, Priority.ALWAYS);
@@ -517,54 +572,6 @@ final class BrowserFileListComp extends SimpleComp {
                     // Use opacity instead of visibility as visibility is kinda bugged with web views
                     setOpacity(1.0);
                 }
-            }
-        }
-    }
-
-    private static class FileSizeCell extends TableCell<BrowserEntry, Number> {
-
-        @Override
-        protected void updateItem(Number fileSize, boolean empty) {
-            super.updateItem(fileSize, empty);
-            if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                setText(null);
-            } else {
-                var path = getTableRow().getItem();
-                if (path.getRawFileEntry().resolved().getKind() == FileKind.DIRECTORY) {
-                    setText("");
-                } else {
-                    setText(byteCount(fileSize.longValue()));
-                }
-            }
-        }
-    }
-
-    private static class FileModeCell extends TableCell<BrowserEntry, String> {
-
-        @Override
-        protected void updateItem(String mode, boolean empty) {
-            super.updateItem(mode, empty);
-            if (empty || getTableRow() == null || getTableRow().getItem() == null) {
-                setText(null);
-            } else {
-                setText(mode);
-            }
-        }
-    }
-
-    private static class FileTimeCell extends TableCell<BrowserEntry, Instant> {
-
-        @Override
-        protected void updateItem(Instant fileTime, boolean empty) {
-            super.updateItem(fileTime, empty);
-            if (empty) {
-                setText(null);
-            } else {
-                setText(
-                        fileTime != null
-                                ? HumanReadableFormat.date(
-                                        fileTime.atZone(ZoneId.systemDefault()).toLocalDateTime())
-                                : "");
             }
         }
     }
