@@ -6,6 +6,7 @@ import io.xpipe.app.core.AppLogs;
 import io.xpipe.app.fxcomps.Comp;
 import io.xpipe.app.fxcomps.CompStructure;
 import io.xpipe.app.fxcomps.SimpleCompStructure;
+import io.xpipe.app.fxcomps.augment.Augment;
 import io.xpipe.app.fxcomps.impl.FancyTooltipAugment;
 import io.xpipe.app.fxcomps.impl.IconButtonComp;
 import io.xpipe.app.fxcomps.util.PlatformThread;
@@ -14,13 +15,13 @@ import io.xpipe.app.issue.UserReportComp;
 import io.xpipe.app.update.UpdateAvailableAlert;
 import io.xpipe.app.update.XPipeDistributionType;
 import io.xpipe.app.util.Hyperlinks;
+import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
 import javafx.beans.property.Property;
 import javafx.css.PseudoClass;
 import javafx.scene.control.Button;
-import javafx.scene.layout.Priority;
-import javafx.scene.layout.Region;
-import javafx.scene.layout.VBox;
+import javafx.scene.layout.*;
+import javafx.scene.paint.Color;
 
 import java.util.List;
 
@@ -39,6 +40,32 @@ public class SideMenuBarComp extends Comp<CompStructure<VBox>> {
         var vbox = new VBox();
         vbox.setFillWidth(true);
 
+        var selectedBorder = Bindings.createObjectBinding(
+                () -> {
+                    var c = Platform.getPreferences().getAccentColor();
+                    return new Border(new BorderStroke(
+                            c, BorderStrokeStyle.SOLID, CornerRadii.EMPTY, new BorderWidths(0, 3, 0, 0)));
+                },
+                Platform.getPreferences().accentColorProperty());
+
+        var hoverBorder = Bindings.createObjectBinding(
+                () -> {
+                    var c = Platform.getPreferences().getAccentColor().darker();
+                    return new Border(new BorderStroke(
+                            c, BorderStrokeStyle.SOLID, CornerRadii.EMPTY, new BorderWidths(0, 3, 0, 0)));
+                },
+                Platform.getPreferences().accentColorProperty());
+
+        var noneBorder = Bindings.createObjectBinding(
+                () -> {
+                    return new Border(new BorderStroke(
+                            Color.TRANSPARENT,
+                            BorderStrokeStyle.SOLID,
+                            CornerRadii.EMPTY,
+                            new BorderWidths(0, 3, 0, 0)));
+                },
+                Platform.getPreferences().accentColorProperty());
+
         var selected = PseudoClass.getPseudoClass("selected");
         entries.forEach(e -> {
             var b = new IconButtonComp(e.icon(), () -> value.setValue(e)).apply(new FancyTooltipAugment<>(e.name()));
@@ -50,22 +77,59 @@ public class SideMenuBarComp extends Comp<CompStructure<VBox>> {
                         struc.get().pseudoClassStateChanged(selected, n.equals(e));
                     });
                 });
+                struc.get()
+                        .borderProperty()
+                        .bind(Bindings.createObjectBinding(
+                                () -> {
+                                    if (value.getValue().equals(e)) {
+                                        return selectedBorder.get();
+                                    }
+
+                                    if (struc.get().isHover()) {
+                                        return hoverBorder.get();
+                                    }
+
+                                    return noneBorder.get();
+                                },
+                                struc.get().hoverProperty(),
+                                value,
+                                hoverBorder,
+                                selectedBorder,
+                                noneBorder));
             });
             b.accessibleText(e.name());
             vbox.getChildren().add(b.createRegion());
         });
 
+        Augment<CompStructure<Button>> simpleBorders = struc -> {
+            struc.get()
+                    .borderProperty()
+                    .bind(Bindings.createObjectBinding(
+                            () -> {
+                                if (struc.get().isHover()) {
+                                    return hoverBorder.get();
+                                }
+
+                                return noneBorder.get();
+                            },
+                            struc.get().hoverProperty(),
+                            value,
+                            hoverBorder,
+                            selectedBorder,
+                            noneBorder));
+        };
+
         {
-            var b = new IconButtonComp(
-                    "mdal-bug_report",
-                    () -> {
+            var b = new IconButtonComp("mdal-bug_report", () -> {
                         var event = ErrorEvent.fromMessage("User Report");
                         if (AppLogs.get().isWriteToFile()) {
                             event.attachment(AppLogs.get().getSessionLogsDirectory());
                         }
                         UserReportComp.show(event.build());
                     })
-                    .apply(new FancyTooltipAugment<>("reportIssue")).accessibleTextKey("reportIssue");
+                    .apply(new FancyTooltipAugment<>("reportIssue"))
+                    .apply(simpleBorders)
+                    .accessibleTextKey("reportIssue");
             b.apply(struc -> {
                 AppFont.setSize(struc.get(), 2);
             });
@@ -74,26 +138,20 @@ public class SideMenuBarComp extends Comp<CompStructure<VBox>> {
 
         {
             var b = new IconButtonComp("mdi2g-github", () -> Hyperlinks.open(Hyperlinks.GITHUB))
-                    .apply(new FancyTooltipAugment<>("visitGithubRepository")).accessibleTextKey("visitGithubRepository");
+                    .apply(new FancyTooltipAugment<>("visitGithubRepository"))
+                    .apply(simpleBorders)
+                    .accessibleTextKey("visitGithubRepository");
             b.apply(struc -> {
                 AppFont.setSize(struc.get(), 2);
             });
             vbox.getChildren().add(b.createRegion());
         }
 
-//        {
-//            var b = new IconButtonComp("mdi2c-comment-processing-outline", () -> Hyperlinks.open(Hyperlinks.ROADMAP))
-//                    .apply(new FancyTooltipAugment<>("roadmap"));
-//            b.apply(struc -> {
-//                AppFont.setSize(struc.get(), 2);
-//            });
-//            vbox.getChildren().add(b.createRegion());
-//        }
-
-
         {
             var b = new IconButtonComp("mdi2d-discord", () -> Hyperlinks.open(Hyperlinks.DISCORD))
-                    .apply(new FancyTooltipAugment<>("discord")).accessibleTextKey("discord");
+                    .apply(new FancyTooltipAugment<>("discord"))
+                    .apply(simpleBorders)
+                    .accessibleTextKey("discord");
             b.apply(struc -> {
                 AppFont.setSize(struc.get(), 2);
             });
@@ -102,7 +160,8 @@ public class SideMenuBarComp extends Comp<CompStructure<VBox>> {
 
         {
             var b = new IconButtonComp("mdi2u-update", () -> UpdateAvailableAlert.showIfNeeded())
-                    .apply(new FancyTooltipAugment<>("updateAvailableTooltip")).accessibleTextKey("updateAvailableTooltip");
+                    .apply(new FancyTooltipAugment<>("updateAvailableTooltip"))
+                    .accessibleTextKey("updateAvailableTooltip");
             b.apply(struc -> {
                 AppFont.setSize(struc.get(), 2);
             });
@@ -123,7 +182,7 @@ public class SideMenuBarComp extends Comp<CompStructure<VBox>> {
         filler.setMaxHeight(3000);
         vbox.getChildren().add(filler);
         VBox.setVgrow(filler, Priority.ALWAYS);
-        filler.prefWidthProperty().bind(((Region) vbox.getChildren().get(0)).widthProperty());
+        filler.prefWidthProperty().bind(((Region) vbox.getChildren().getFirst()).widthProperty());
 
         vbox.getStyleClass().add("sidebar-comp");
         return new SimpleCompStructure<>(vbox);
