@@ -35,10 +35,6 @@ public interface DataStoreProvider {
         return false;
     }
 
-    default ModuleInstall getRequiredAdditionalInstallation() {
-        return null;
-    }
-
     default void validate() {
         for (Class<?> storeClass : getStoreClasses()) {
             if (!JacksonizedValue.class.isAssignableFrom(storeClass)) {
@@ -123,14 +119,13 @@ public interface DataStoreProvider {
         return null;
     }
 
-    default boolean init() throws Exception {
+    default boolean init() {
         return true;
     }
 
-    default void postInit(){
-    }
+    default void postInit() {}
 
-    default void storageInit() throws Exception {}
+    default void storageInit() {}
 
     default boolean isShareableFromLocalMachine() {
         return false;
@@ -190,7 +185,7 @@ public interface DataStoreProvider {
     List<String> getPossibleNames();
 
     default String getId() {
-        return getPossibleNames().get(0);
+        return getPossibleNames().getFirst();
     }
 
     List<Class<?>> getStoreClasses();
