@@ -56,14 +56,11 @@ public class ToggleGroupComp<T> extends Comp<CompStructure<HBox>> {
             }
 
             if (box.getChildren().size() > 0) {
-                box.getChildren().get(0).getStyleClass().add(Styles.LEFT_PILL);
+                box.getChildren().getFirst().getStyleClass().add(Styles.LEFT_PILL);
                 for (int i = 1; i < box.getChildren().size() - 1; i++) {
                     box.getChildren().get(i).getStyleClass().add(Styles.CENTER_PILL);
                 }
-                box.getChildren()
-                        .get(box.getChildren().size() - 1)
-                        .getStyleClass()
-                        .add(Styles.RIGHT_PILL);
+                box.getChildren().getLast().getStyleClass().add(Styles.RIGHT_PILL);
             }
         });
 
