@@ -1,11 +1,12 @@
 package io.xpipe.app.util;
 
 import atlantafx.base.controls.Spacer;
+import io.xpipe.app.comp.base.ToggleSwitchComp;
 import io.xpipe.app.core.AppI18n;
 import io.xpipe.app.ext.GuiDialog;
 import io.xpipe.app.fxcomps.Comp;
 import io.xpipe.app.fxcomps.impl.*;
-import io.xpipe.core.util.SecretValue;
+import io.xpipe.core.util.InPlaceSecretValue;
 import javafx.beans.property.*;
 import javafx.beans.value.ObservableValue;
 import javafx.geometry.Orientation;
@@ -13,10 +14,13 @@ import javafx.scene.control.Label;
 import javafx.scene.layout.Region;
 import net.synedra.validatorfx.Check;
 
+import java.nio.file.InvalidPathException;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Consumer;
 import java.util.function.Supplier;
 
 public class OptionsBuilder {
@@ -33,10 +37,6 @@ public class OptionsBuilder {
     private Comp<?> lastCompHeadReference;
     private ObservableValue<String> lastNameReference;
 
-    public Validator buildEffectiveValidator() {
-        return new ChainedValidator(allValidators);
-    }
-
     public OptionsBuilder() {
         this.ownValidator = new SimpleValidator();
         this.allValidators.add(ownValidator);
@@ -47,14 +47,21 @@ public class OptionsBuilder {
         this.allValidators.add(ownValidator);
     }
 
+    public Validator buildEffectiveValidator() {
+        return new ChainedValidator(allValidators);
+    }
+
     public OptionsBuilder choice(IntegerProperty selectedIndex, Map<String, OptionsBuilder> options) {
         var list = options.entrySet().stream()
                 .map(e -> new ChoicePaneComp.Entry(
-                        AppI18n.observable(e.getKey()), e.getValue() != null ? e.getValue().buildComp() : Comp.empty()))
+                        AppI18n.observable(e.getKey()),
+                        e.getValue() != null ? e.getValue().buildComp() : Comp.empty()))
                 .toList();
-        var validatorList =
-                options.values().stream().map(builder -> builder != null ? builder.buildEffectiveValidator() : new SimpleValidator()).toList();
-        var selected = new SimpleObjectProperty<>(selectedIndex.getValue() != -1 ? list.get(selectedIndex.getValue()) : null);
+        var validatorList = options.values().stream()
+                .map(builder -> builder != null ? builder.buildEffectiveValidator() : new SimpleValidator())
+                .toList();
+        var selected =
+                new SimpleObjectProperty<>(selectedIndex.getValue() != -1 ? list.get(selectedIndex.getValue()) : null);
         selected.addListener((observable, oldValue, newValue) -> {
             selectedIndex.setValue(newValue != null ? list.indexOf(newValue) : null);
         });
@@ -93,6 +100,10 @@ public class OptionsBuilder {
         entries.add(entry);
     }
 
+    public OptionsBuilder nameAndDescription(String key) {
+        return name(key).description(key + "Description");
+    }
+
     public OptionsBuilder sub(OptionsBuilder builder) {
         return sub(builder, null);
     }
@@ -115,7 +126,6 @@ public class OptionsBuilder {
         return this;
     }
 
-
     public OptionsBuilder addTitle(String titleKey) {
         finishCurrent();
         entries.add(new OptionsComp.Entry(
@@ -134,13 +144,23 @@ public class OptionsBuilder {
         return this;
     }
 
-    public OptionsBuilder decorate(Check c) {
+    public OptionsBuilder check(Check c) {
         lastCompHeadReference.apply(s -> c.decorates(s.get()));
         return this;
     }
 
     public OptionsBuilder disable() {
         lastCompHeadReference.disable(new SimpleBooleanProperty(true));
+        return this;
+    }
+
+    public OptionsBuilder disable(ObservableValue<Boolean> b) {
+        lastCompHeadReference.disable(b);
+        return this;
+    }
+
+    public OptionsBuilder hide(ObservableValue<Boolean> b) {
+        lastCompHeadReference.hide(b);
         return this;
     }
 
@@ -151,26 +171,31 @@ public class OptionsBuilder {
 
     public OptionsBuilder nonNull() {
         var e = lastNameReference;
-        var p = props.get(props.size() - 1);
-        return decorate(Validator.nonNull(ownValidator, e, p));
+        var p = props.getLast();
+        return check(Validator.nonNull(ownValidator, e, p));
+    }
+
+    public OptionsBuilder withValidator(Consumer<Validator> val) {
+        val.accept(ownValidator);
+        return this;
     }
 
     public OptionsBuilder nonEmpty() {
         var e = lastNameReference;
-        var p = props.get(props.size() - 1);
-        return decorate(Validator.nonEmpty(ownValidator, e, (ReadOnlyListProperty<?>) p));
+        var p = props.getLast();
+        return check(Validator.nonEmpty(ownValidator, e, (ReadOnlyListProperty<?>) p));
     }
 
     public OptionsBuilder validate() {
         var e = lastNameReference;
-        var p = props.get(props.size() - 1);
-        return decorate(Validator.nonNull(ownValidator, e, p));
+        var p = props.getLast();
+        return check(Validator.nonNull(ownValidator, e, p));
     }
 
     public OptionsBuilder nonNull(Validator v) {
         var e = lastNameReference;
-        var p = props.get(props.size() - 1);
-        return decorate(Validator.nonNull(v, e, p));
+        var p = props.getLast();
+        return check(Validator.nonNull(v, e, p));
     }
 
     private void pushComp(Comp<?> comp) {
@@ -194,6 +219,13 @@ public class OptionsBuilder {
     }
 
     public OptionsBuilder addToggle(Property<Boolean> prop) {
+        var comp = new ToggleSwitchComp(prop, null);
+        pushComp(comp);
+        props.add(prop);
+        return this;
+    }
+
+    public OptionsBuilder addYesNoToggle(Property<Boolean> prop) {
         var comp = new ToggleGroupComp<>(
                 prop,
                 new SimpleObjectProperty<>(Map.of(
@@ -205,6 +237,28 @@ public class OptionsBuilder {
 
     public OptionsBuilder addString(Property<String> prop) {
         return addString(prop, false);
+    }
+
+    public OptionsBuilder addPath(Property<Path> prop) {
+        var string = new SimpleStringProperty(
+                prop.getValue() != null ? prop.getValue().toString() : null);
+        var comp = new TextFieldComp(string, true);
+        string.addListener((observable, oldValue, newValue) -> {
+            if (newValue == null) {
+                prop.setValue(null);
+                return;
+            }
+
+            try {
+                var p = Path.of(newValue);
+                prop.setValue(p);
+            } catch (InvalidPathException ignored) {
+
+            }
+        });
+        pushComp(comp);
+        props.add(prop);
+        return this;
     }
 
     public OptionsBuilder addString(Property<String> prop, boolean lazy) {
@@ -263,7 +317,7 @@ public class OptionsBuilder {
         return this;
     }
 
-    public OptionsBuilder addSecret(Property<SecretValue> prop) {
+    public OptionsBuilder addSecret(Property<InPlaceSecretValue> prop) {
         var comp = new SecretFieldComp(prop);
         pushComp(comp);
         props.add(prop);
