@@ -19,11 +19,6 @@ import java.util.stream.Collectors;
 public class CopyPathAction implements BrowserAction, BranchAction {
 
     @Override
-    public String getName(OpenFileSystemModel model, List<BrowserEntry> entries) {
-        return "Copy location";
-    }
-
-    @Override
     public Category getCategory() {
         return Category.COPY_PASTE;
     }
@@ -34,23 +29,28 @@ public class CopyPathAction implements BrowserAction, BranchAction {
     }
 
     @Override
+    public String getName(OpenFileSystemModel model, List<BrowserEntry> entries) {
+        return "Copy location";
+    }
+
+    @Override
     public List<LeafAction> getBranchingActions(OpenFileSystemModel model, List<BrowserEntry> entries) {
         return List.of(
                 new LeafAction() {
+                    @Override
+                    public KeyCombination getShortcut() {
+                        return new KeyCodeCombination(KeyCode.C, KeyCombination.ALT_DOWN, KeyCombination.SHORTCUT_DOWN);
+                    }
+
                     @Override
                     public String getName(OpenFileSystemModel model, List<BrowserEntry> entries) {
                         if (entries.size() == 1) {
                             return " "
                                     + BrowserActionFormatter.centerEllipsis(
-                                            entries.get(0).getRawFileEntry().getPath(), 50);
+                                            entries.getFirst().getRawFileEntry().getPath(), 50);
                         }
 
                         return "Absolute Paths";
-                    }
-
-                    @Override
-                    public KeyCombination getShortcut() {
-                        return new KeyCodeCombination(KeyCode.C, KeyCombination.ALT_DOWN, KeyCombination.SHORTCUT_DOWN);
                     }
 
                     @Override
@@ -67,7 +67,7 @@ public class CopyPathAction implements BrowserAction, BranchAction {
                         if (entries.size() == 1) {
                             return " "
                                     + BrowserActionFormatter.centerEllipsis(
-                                            entries.get(0).getRawFileEntry().getPath(), 50);
+                                            entries.getFirst().getRawFileEntry().getPath(), 50);
                         }
 
                         return "Absolute Link Paths";
@@ -99,7 +99,7 @@ public class CopyPathAction implements BrowserAction, BranchAction {
                         if (entries.size() == 1) {
                             return "\""
                                     + BrowserActionFormatter.centerEllipsis(
-                                            entries.get(0).getRawFileEntry().getPath(), 50)
+                                            entries.getFirst().getRawFileEntry().getPath(), 50)
                                     + "\"";
                         }
 
@@ -123,23 +123,23 @@ public class CopyPathAction implements BrowserAction, BranchAction {
                 },
                 new LeafAction() {
                     @Override
+                    public KeyCombination getShortcut() {
+                        return new KeyCodeCombination(
+                                KeyCode.C, KeyCombination.SHIFT_DOWN, KeyCombination.SHORTCUT_DOWN);
+                    }
+
+                    @Override
                     public String getName(OpenFileSystemModel model, List<BrowserEntry> entries) {
                         if (entries.size() == 1) {
                             return " "
                                     + BrowserActionFormatter.centerEllipsis(
-                                            FileNames.getFileName(entries.get(0)
+                                            FileNames.getFileName(entries.getFirst()
                                                     .getRawFileEntry()
                                                     .getPath()),
                                             50);
                         }
 
                         return "File Names";
-                    }
-
-                    @Override
-                    public KeyCombination getShortcut() {
-                        return new KeyCodeCombination(
-                                KeyCode.C, KeyCombination.SHIFT_DOWN, KeyCombination.SHORTCUT_DOWN);
                     }
 
                     @Override
@@ -157,7 +157,7 @@ public class CopyPathAction implements BrowserAction, BranchAction {
                         if (entries.size() == 1) {
                             return " "
                                     + BrowserActionFormatter.centerEllipsis(
-                                            FileNames.getFileName(entries.get(0)
+                                            FileNames.getFileName(entries.getFirst()
                                                     .getRawFileEntry()
                                                     .getPath()),
                                             50);
@@ -199,7 +199,7 @@ public class CopyPathAction implements BrowserAction, BranchAction {
                         if (entries.size() == 1) {
                             return "\""
                                     + BrowserActionFormatter.centerEllipsis(
-                                            FileNames.getFileName(entries.get(0)
+                                            FileNames.getFileName(entries.getFirst()
                                                     .getRawFileEntry()
                                                     .getPath()),
                                             50)
