@@ -16,12 +16,7 @@ public class OpenDirectoryAction implements LeafAction {
 
     @Override
     public void execute(OpenFileSystemModel model, List<BrowserEntry> entries) {
-        model.cdAsync(entries.get(0).getRawFileEntry().getPath());
-    }
-
-    @Override
-    public Category getCategory() {
-        return Category.OPEN;
+        model.cdAsync(entries.getFirst().getRawFileEntry().getPath());
     }
 
     @Override
@@ -30,9 +25,8 @@ public class OpenDirectoryAction implements LeafAction {
     }
 
     @Override
-    public boolean isApplicable(OpenFileSystemModel model, List<BrowserEntry> entries) {
-        return entries.size() == 1
-                && entries.stream().allMatch(entry -> entry.getRawFileEntry().getKind() == FileKind.DIRECTORY);
+    public Category getCategory() {
+        return Category.OPEN;
     }
 
     @Override
@@ -43,5 +37,11 @@ public class OpenDirectoryAction implements LeafAction {
     @Override
     public String getName(OpenFileSystemModel model, List<BrowserEntry> entries) {
         return "Open";
+    }
+
+    @Override
+    public boolean isApplicable(OpenFileSystemModel model, List<BrowserEntry> entries) {
+        return entries.size() == 1
+                && entries.stream().allMatch(entry -> entry.getRawFileEntry().getKind() == FileKind.DIRECTORY);
     }
 }
